--- a/excel-projects.html
+++ b/excel-projects.html
@@ -91,6 +91,13 @@
                         <p>Time series Forecasting analysis using allocation and regression models to predict sales trends, forecast sales, and improve decision-making for Cerveza Fina. .</p>
                         <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/EbsPT7hjb7ZOoQhHBD1hKa4BweIK4Sd6l1hwaDsoE0DwjQ?e=xkrocQ" class="download-btn" download>Download</a>
                     </div>
+
+                     <!-- Project 6: Crimes Automated Dashboard Project -->
+                    <div class="project-card">
+                        <h2>Crimes Automated Dashboard Project</h2>
+                        <p>An interactive and dynamic tool that provides real-time insights into crime data. This dashboard automates the collection, processing, and visualization of crime statistics, enabling users to monitor trends, identify hotspots and make data-driven decisions. .</p>
+                        <a href="https://1drv.ms/x/c/8ebe95e4a7eb0957/EfTVBvMbugNFkKZyXtqSFgwBRlYPvx2495z2XlKVi7qvEQ?e=zfdXa7" class="download-btn" download>Download</a>
+                    </div>
                 </div>
             </article>
         </div>
