--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<ul class="links">
 					<li class="active"><a href="index.html">Data Analyst Projects</a></li>
 					<li><a href="certifications.html">Certifications</a></li>
+                                        <li><a href="Blogs.html">Blog</a></li>
 				</ul>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/joel-davis15/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
