--- a/Blog.html
+++ b/Blog.html
@@ -91,10 +91,9 @@
   </header>
 
   <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
+    <a href="index.html">Projects Portfolio</a>
+    <a href="certifications.html">Certifications</a>
     <a href="blog.html">Blog</a>
-    <a href="contact.html">Contact</a>
   </nav>
 
   <div class="container">
