--- a/Blog.html
+++ b/Blog.html
@@ -113,7 +113,7 @@
       <h2>Cleaning and Exploring Life Expectancy Data with SQL</h2>
       <p class="meta">February 2025 | Tools: SQL, Data Cleaning, EDA</p>
       <p>I cleaned a global dataset on life expectancy indicators using SQL, removed inconsistencies, and explored patterns using queries and aggregations. The insights highlighted correlations between income level and healthcare access.</p>
-      <a href="blog-life-expectancy.html">Read more →</a>
+      <a href="life-expectancy-sql.html">Read more →</a>
     </div>
 
     <div class="blog-post">
