--- a/Blog.html
+++ b/Blog.html
@@ -112,7 +112,18 @@
     <div class="blog-post">
       <h2>Cleaning and Exploring Life Expectancy Data with SQL</h2>
       <p class="meta">February 2025 | Tools: SQL, Data Cleaning, EDA</p>
-      <p>I cleaned a global dataset on life expectancy indicators using SQL, removed inconsistencies, and explored patterns using queries and aggregations. The insights highlighted correlations between income level and healthcare access.</p>
+      <p>In this blog, I walk through a hands-on SQL project where I clean and explore the World Life Expectancy dataset sourced from Kaggle. This dataset includes key health and economic indicators for countries around the world from the year 2000 to 2015.
+
+You’ll learn how I:
+
+Identified and removed duplicate records,
+Handled missing values using logical imputation techniques,
+Standardized country classifications (Developed vs. Developing),
+explored trends in life expectancy, GDP, BMI, and adult mortality.
+
+Using nothing but SQL, this project showcases how powerful and effective query-based data manipulation can be — from cleaning the data to uncovering global health patterns and socioeconomic disparities.
+
+Let’s dive in! 👇</p>
       <a href="life-expectancy-sql.html">Read more →</a>
     </div>
 
