--- a/Blog.html
+++ b/Blog.html
@@ -128,10 +128,12 @@ Let’s dive in! 👇</p>
     </div>
 
     <div class="blog-post">
-      <h2>Power BI Dashboard for Retail Sales KPIs</h2>
+      <h2>Building a Business Financial Dashboard in Power BI</h2>
       <p class="meta">January 2025 | Tools: Power BI, DAX, Visualization</p>
-      <p>This project focused on building an interactive Power BI dashboard with KPIs like gross profit, total sales, and top-selling regions. I explain how I used DAX to calculate custom metrics and visual storytelling.</p>
-      <a href="blog-powerbi-dashboard.html">Read more →</a>
+      <p>I used Power BI to build a dynamic Business Financial Dashboard to help IT department managers and executives monitor actual spending, budgets, and forecasts across multiple departments, time periods, and countries.
+
+This blog highlights the design, structure, and business value of the dashboard, including visuals that track financial performance, variances, and operational insights across organizational levels.</p>
+      <a href="powerbi-dashboard.html">Read more →</a>
     </div>
 
   </div>
