--- a/powerbi-dashboard.html
+++ b/powerbi-dashboard.html
@@ -140,7 +140,7 @@ This dashboard empowers teams to:
 This Power BI dashboard transforms financial reporting into a dynamic, decision-making tool. It’s not just about visualizing numbers — it’s about enabling business users to explore data intuitively, identify problems early, and make data-backed decisions confidently.
 </p>
 <p>
-To see more dashboards or view the data model and DAX measures behind the scenes, check out my <a href="#">portfolio</a> or <a href="#">GitHub</a>.
+To see more dashboards or view the data model and DAX measures behind the scenes, check out my <a href="index.html">portfolio</a> or <a href="https://github.com/Joelsd2005/PowerBI-projects">GitHub</a>.
 </p>
 
 </body>
