--- a/Blog.html
+++ b/Blog.html
@@ -103,10 +103,19 @@
     </div>
 
     <div class="blog-post">
-      <h2>Forecasting Supermarket Sales in Excel</h2>
+      <h2>Tracking US Public Debt Using Excel</h2>
       <p class="meta">March 2025 | Tools: Excel, Forecasting, Charts</p>
-      <p>This project analyzes monthly sales data using Excel’s built-in forecasting tools. I explain how seasonality and trend components were handled, and how I visualized and interpreted revenue patterns to inform business decisions.</p>
-      <a href="blog-supermarket-sales.html">Read more →</a>
+      <p>Understanding the dynamics of national debt is essential for shaping fiscal policy, guiding investment decisions, and forecasting economic health. In this project, I created an Excel-based tracker that analyzes the historical trends and future projections of U.S. public debt. The goal was to build a tool for a small debt agency in Washington, D.C., that could answer key financial questions using data from the U.S. Treasury.
+
+Through this tracker, I explored:
+How much the debt held by the public has increased each year,
+Which months consistently show the largest jumps in debt,
+What the next few years might look like based on historical growth patterns
+
+This project highlights how Excel can be used not just for reporting, but for storytelling turning raw numbers into clear, strategic insights. Let’s walk through the process.
+
+</p>
+      <a href="us-debt-tracker.html">Read more →</a>
     </div>
 
     <div class="blog-post">
