--- a/Blog.html
+++ b/Blog.html
@@ -92,8 +92,8 @@
 
   <nav>
     <a href="index.html">Projects Portfolio</a>
+    <a href="Blog.html">Blog</a>
     <a href="certifications.html">Certifications</a>
-    <a href="blog.html">Blog</a>
   </nav>
 
   <div class="container">
