--- a/Blog.html
+++ b/Blog.html
@@ -145,6 +145,23 @@ This blog highlights the design, structure, and business value of the dashboard,
       <a href="powerbi-dashboard.html">Read more →</a>
     </div>
 
+   <div class="blog-post">
+     <h2>Exploring Movie Genres with Python</h2>
+     <p class="meta">April 2025 | Tools: Python, Pandas, Matplotlib</p>
+     <p>This project dives into a dataset of movies to uncover trends in genre popularity, distribution over time, and audience ratings. Using Python, I cleaned and analyzed the data with <code>pandas</code> and created visualizations using <code>matplotlib</code> and <code>seaborn</code> to tell the story behind the numbers.
+  </p>
+  <p>
+    I explored questions such as:
+    <ul>
+      <li>Which genres are the most commonly produced?</li>
+      <li>How have genre trends shifted over the decades?</li>
+      <li>Are there genres that consistently receive higher ratings?</li>
+    </ul>
+    This project showcases my ability to extract insights from unstructured data and communicate findings with clear, compelling visuals — skills essential for any data analyst working with consumer or entertainment data.
+  </p>
+  <a href="movies-genre-analysis.html">Read more →</a>
+</div>
+
   </div>
 
   <footer>
