--- a/movies-genre-analysis.html
+++ b/movies-genre-analysis.html
@@ -166,7 +166,7 @@ This project highlights how Python can turn entertainment data into compelling i
 </p>
 
 <p>
-Want to explore the code behind the visuals? Check out my <a href="#">GitHub</a> or return to the <a href="#">project gallery</a> for more.
+Want to explore the code behind the visuals? Check out my <a href="index.html">project porfolio</a> for more.
 </p>
 
 </body>
