--- a/Blog.html
+++ b/Blog.html
@@ -162,6 +162,25 @@ This blog highlights the design, structure, and business value of the dashboard,
   <a href="movies-genre-analysis.html">Read more →</a>
 </div>
 
+<div class="blog-post">
+  <h2>Visualizing Hollywood’s Most Profitable Films with Tableau</h2>
+  <p class="meta">May 2025 | Tools: Tableau, Data Visualization, Score Analysis</p>
+  <p>
+    In this project, I used Tableau to analyze and visualize trends in film profitability and audience reception across Hollywood. Using a dataset containing movie budgets, gross revenue, and audience scores, I built an interactive dashboard to uncover how success varies by genre, studio, and release year.
+  </p>
+  <p>
+    Key insights include:
+    <ul>
+      <li>Which films achieved the highest audience scores</li>
+      <li>Which studios consistently led in viewer satisfaction</li>
+      <li>How worldwide gross profits evolved year over year</li>
+    </ul>
+    The dashboard empowers users to filter by genre, studio, and release year — making it an engaging tool for both industry analysts and film enthusiasts.
+  </p>
+  <a href="tableau-hollywood-films.html">Read more →</a>
+</div>
+
+
   </div>
 
   <footer>
