--- a/excel-projects.html
+++ b/excel-projects.html
@@ -23,7 +23,7 @@
             max-width: 100%;
             border-radius: 5px;
         }
-        .download-btn {
+        .view-btn {
             display: inline-block;
             margin-top: 10px;
             padding: 10px 15px;
@@ -33,7 +33,7 @@
             border-radius: 5px;
             transition: 0.3s;
         }
-        .download-btn:hover {
+        .view-btn:hover {
             background: #0056b3;
         }
     </style>
@@ -53,7 +53,7 @@
             <article class="post featured">
                 <header class="major">
                     <h1>Excel Projects</h1>
-                    <p>Download my Excel projects below. Each file includes a detailed breakdown of the data analysis process.</p>
+                    <p>View my Excel projects below. Each file includes a detailed breakdown of the data analysis process.</p>
                 </header>
 
                 <div class="project-container">
