--- a/excel-projects.html
+++ b/excel-projects.html
@@ -23,7 +23,7 @@
             max-width: 100%;
             border-radius: 5px;
         }
-        .view-btn {
+        .download-btn {
             display: inline-block;
             margin-top: 10px;
             padding: 10px 15px;
@@ -33,7 +33,7 @@
             border-radius: 5px;
             transition: 0.3s;
         }
-        .view-btn:hover {
+        .download-btn:hover {
             background: #0056b3;
         }
     </style>
